[package]
name = "unique_kmers_evolution"
version = "0.1.0"
edition = "2024"

[dependencies]
bio = "2.3.0"
plotters = "0.3"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
rustc-hash = "2.1.1"
flate2 = "1.0"